[gd_scene load_steps=3 format=3 uid="uid://0irp083fvy7v"]

[ext_resource type="Script" path="res://cancer_cell_cluster.gd" id="1_qb1w4"]
[ext_resource type="PackedScene" uid="uid://wh8os461b38n" path="res://cancer_cell.tscn" id="2_ofif5"]

[node name="CancerCellCluster" type="Node2D"]
script = ExtResource("1_qb1w4")
cell_scene = ExtResource("2_ofif5")

[node name="FirstCell" parent="." instance=ExtResource("2_ofif5")]
unique_name_in_owner = true
has_light = true
has_mouth = true
has_flow_control = true
has_top_flagellum = true
has_bottom_flagellum = true

[connection signal="sibling_created" from="FirstCell" to="." method="on_cell_created"]
